--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
     <body>
         <div id="app"></div>
-        <script type="module" src="/src/index.tsx"></script>
+        <script type="module" src="/src/index.js"></script>
     </body>
 
 </html>
